# trading-engine

./: README.md  pyproject.toml  reference.json  requirements.txt
data/: sample_orders.csv  sample_prices.csv
src/: backtester.py  dashboard.py  market_data.py  position_manager.py
tests/: test_backtester.py  test_core_pytest.py  test_dashboard.py  test_event.py  test_execution_engine.py  test_market_data.py  test_order_book.py  test_position.py  test_risk_manager.py
trading_engine/: dashboard.py  event_bus.py  events.py  execution_engine.py  market_data.py  order.py  order_book.py  position.py  position_manager.py  risk_manager.py  strategy.py
