[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-engine"
version = "0.1.0"
description = "Educational event-driven trading engine architecture project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.7.0,<15.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
